--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "x": "concurrently \"npm:serve\" \"json-server --watch db.json\""
+    "x": "concurrently \"npm:serve\" \"json-server --watch db.json\"",
+    "deploy": "sh deploy.sh"
   },
   "dependencies": {
     "axios": "^0.23.0",
