--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "x": "concurrently \"npm:serve\" \"json-server --watch db.json\"",
-    "deploy": "sh deploy.sh"
+    "deploy2": "sh deploy.sh",
+    "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "axios": "^0.23.0",
@@ -23,7 +24,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "execa": "latest"
   },
   "eslintConfig": {
     "root": true,
